refactor: change requestBody about the POST connection method
